version/0.64/_sources/autoapi/pyedb/configuration/cfg_boundaries/CfgBoundaries.rst.txt






:class:`CfgBoundaries`
======================


.. py:class:: pyedb.configuration.cfg_boundaries.CfgBoundaries(/, **data: Any)

   Bases: :py:obj:`CfgBase`


   
   !!! abstract "Usage Documentation"
       [Models](../concepts/models.md)

   A base class for creating Pydantic models.

   Attributes:
       __class_vars__: The names of the class variables defined on the model.
       __private_attributes__: Metadata about the private attributes of the model.
       __signature__: The synthesized `__init__` [`Signature`][inspect.Signature] of the model.

       __pydantic_complete__: Whether model building is completed, or if there are still undefined fields.
       __pydantic_core_schema__: The core schema of the model.
       __pydantic_custom_init__: Whether the model has a custom `__init__` function.
       __pydantic_decorators__: Metadata containing the decorators defined on the model.
           This replaces `Model.__validators__` and `Model.__root_validators__` from Pydantic V1.
       __pydantic_generic_metadata__: Metadata for generic models; contains data used for a similar purpose to
           __args__, __origin__, __parameters__ in typing-module generics. May eventually be replaced by these.
       __pydantic_parent_namespace__: Parent namespace of the model, used for automatic rebuilding of models.
       __pydantic_post_init__: The name of the post-init method for the model, if defined.
       __pydantic_root_model__: Whether the model is a [`RootModel`][pydantic.root_model.RootModel].
       __pydantic_serializer__: The `pydantic-core` `SchemaSerializer` used to dump instances of the model.
       __pydantic_validator__: The `pydantic-core` `SchemaValidator` used to validate instances of the model.

       __pydantic_fields__: A dictionary of field names and their corresponding [`FieldInfo`][pydantic.fields.FieldInfo] objects.
       __pydantic_computed_fields__: A dictionary of computed field names and their corresponding [`ComputedFieldInfo`][pydantic.fields.ComputedFieldInfo] objects.

       __pydantic_extra__: A dictionary containing extra values, if [`extra`][pydantic.config.ConfigDict.extra]
           is set to `'allow'`.
       __pydantic_fields_set__: The names of fields explicitly set during instantiation.
       __pydantic_private__: Values of private attributes set on the model instance.















   ..
       !! processed by numpydoc !!



.. py:currentmodule:: CfgBoundaries

Overview
--------

.. tab-set::


   .. tab-item:: Constructors

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~create`
            - 




   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~use_open_region`
            - 
          * - :py:attr:`~open_region_type`
            - 
          * - :py:attr:`~is_pml_visible`
            - 
          * - :py:attr:`~operating_freq`
            - 
          * - :py:attr:`~pml_radiation_factor`
            - 
          * - :py:attr:`~dielectric_extent_type`
            - 
          * - :py:attr:`~dielectric_base_polygon`
            - 
          * - :py:attr:`~dielectric_extent_size`
            - 
          * - :py:attr:`~honor_user_dielectric`
            - 
          * - :py:attr:`~extent_type`
            - 
          * - :py:attr:`~base_polygon`
            - 
          * - :py:attr:`~truncate_air_box_at_ground`
            - 
          * - :py:attr:`~air_box_horizontal_extent`
            - 
          * - :py:attr:`~air_box_positive_vertical_extent`
            - 
          * - :py:attr:`~air_box_negative_vertical_extent`
            - 
          * - :py:attr:`~sync_air_box_vertical_extent`
            - 






Import detail
-------------

.. code-block:: python

    from pyedb.configuration.cfg_boundaries import CfgBoundaries


Attribute detail
----------------

.. py:attribute:: use_open_region
   :type:  Optional[bool]
   :value: None


.. py:attribute:: open_region_type
   :type:  Optional[str]
   :value: None


.. py:attribute:: is_pml_visible
   :type:  Optional[bool]
   :value: None


.. py:attribute:: operating_freq
   :type:  Optional[Any]
   :value: None


.. py:attribute:: pml_radiation_factor
   :type:  Optional[int]
   :value: None


.. py:attribute:: dielectric_extent_type
   :type:  Optional[str]
   :value: None


.. py:attribute:: dielectric_base_polygon
   :type:  Optional[str]
   :value: None


.. py:attribute:: dielectric_extent_size
   :type:  Optional[PaddingData]
   :value: None


.. py:attribute:: honor_user_dielectric
   :type:  bool
   :value: None


.. py:attribute:: extent_type
   :type:  Optional[str]
   :value: None


.. py:attribute:: base_polygon
   :type:  Optional[str]
   :value: None


.. py:attribute:: truncate_air_box_at_ground
   :type:  Optional[bool]
   :value: None


.. py:attribute:: air_box_horizontal_extent
   :type:  Optional[PaddingData]
   :value: None


.. py:attribute:: air_box_positive_vertical_extent
   :type:  Optional[PaddingData]
   :value: None


.. py:attribute:: air_box_negative_vertical_extent
   :type:  Optional[PaddingData]
   :value: None


.. py:attribute:: sync_air_box_vertical_extent
   :type:  Optional[bool]
   :value: None




Method detail
-------------

.. py:method:: create(**kwargs)
   :classmethod:





